[package]
name = "mill"
version = "0.1.0"
authors = ["Jannik Becker <jannikb@posteo.de>"]
edition = "2021"

[dependencies]
yansi = "0.5.1"
smallvec = "1.10.0"
smartstring = "1.0.1"
once_cell = "1.17.1"
either = "1.8.1"
fnv = "1.0.7"

[profile.dev]
opt-level = 0

[profile.release]
lto = true # = fat lto, lto = "thin" might be preferable
codegen-units = 1 # disable codegen unit parallelization to higher the optimization potential
panic = "abort" # disables catch or unwind panics, reduces binary size & might increase performance slightly
strip = true

[dev-dependencies]
criterion = "0.4"
nanorand = "0.7.0"
#oorandom = "11.1.3"

[[bench]]
harness = false
name = "criterion_benchmarks"
